--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.0",
+        "@mui/icons-material": "^6.4.7",
+        "@mui/material": "^6.4.7",
         "json-server": "^1.0.0-beta.3",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
@@ -28,7 +32,7 @@
         "eslint-plugin-react-refresh": "^0.4.19",
         "globals": "^15.15.0",
         "prettier": "3.5.3",
-        "typescript": "~5.7.2",
+        "typescript": "^5.8.2",
         "typescript-eslint": "^8.25.0",
         "vite": "^6.2.0"
     }
